--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: Hotel Sarathi
 logo: /assets/img/Hotel_front.jpeg
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
